    The old name works temporarily but will be removed in a future release.

Implementation details:
 * Removed `@DefaultInUncheckedCodeFor` and
   `@DefaultQualifierInHierarchyInUncheckedCode`.
 * Renamings:
   applyUncheckedCodeDefaults() to applyConservativeDefaults()
   useUncheckedCodeDefault() to useConservativeDefault()
 * Deprecated the `framework.source.Result` class; use `DiagMessage` or
   `List<DiagMessage>` instead.  If you were creating a `Result` just to
   pass it to `report`, then call new methods `reportError` and
   `reportWarning` instead.
 * AbstractTypeProcessor#typeProcessingOver() always gets called.

---------------------------------------------------------------------------

Version 3.2.0, March 2, 2020

@SuppressWarnings("initialization") suppresses only warnings whose key
contains "initialization".  Previously, it suppressed all warnings issued
by the Nullness Checker or the Initialization Checker.

Closed issues:
2719, 3001, 3020, 3069, 3093, 3120.

---------------------------------------------------------------------------

Version 3.1.1, February 3, 2020

New command-line options:
  -AassumeDeterministic Unsoundly assume that every method is deterministic
  -AassumePure Unsoundly assume that every method is pure

Renamed -Anocheckjdk to -ApermitMissingJdk.
The old version still works, for backward compatibility.

Renamed -Alint=forbidnonnullarraycomponents to
-Alint=soundArrayCreationNullness.  The old version still works, for
backward compatibility.

Implementation details:
 * Deprecated QualifierHierarchy#getTypeQualifiers.
 * Deprecated Analysis#Analysis(ProcessingEnvironment) and Analysis#Analysis(T,
   int, ProcessingEnvironment); use Analysis#Analysis(), Analysis#Analysis(int),
   Analysis#Analysis(T), and Analysis#Analysis(T, int) instead.
 * Renamed SourceChecker#getMessages to getMessagesProperties.
 * Renamed one overload of SourceChecker.printMessages to printOrStoreMessage.

Closed issues: