@@ -75,7 +75,7 @@ import org.checkerframework.framework.type.AnnotatedTypeMirror.AnnotatedDeclared
 import org.checkerframework.framework.type.AnnotatedTypeMirror.AnnotatedExecutableType;
 import org.checkerframework.framework.type.AnnotatedTypeMirror.AnnotatedTypeVariable;
 import org.checkerframework.framework.type.AnnotatedTypeMirror.AnnotatedWildcardType;
-import org.checkerframework.framework.type.visitor.AnnotatedTypeMerger;
+import org.checkerframework.framework.type.visitor.AnnotatedTypeReplacer;
 import org.checkerframework.javacutil.AnnotationBuilder;
 import org.checkerframework.javacutil.AnnotationUtils;
 import org.checkerframework.javacutil.BugInCF;
@@ -1035,9 +1035,9 @@ public class StubParser {
                 AnnotatedTypeVariable typeVarUse = (AnnotatedTypeVariable) atype;
                 for (AnnotatedTypeVariable typePar : typeParameters) {
                     if (typePar.getUnderlyingType() == atype.getUnderlyingType()) {
-                        AnnotatedTypeMerger.merge(
+                        AnnotatedTypeReplacer.replace(
                                 typePar.getUpperBound(), typeVarUse.getUpperBound());
-                        AnnotatedTypeMerger.merge(
+                        AnnotatedTypeReplacer.replace(
                                 typePar.getLowerBound(), typeVarUse.getLowerBound());
                     }
                 }
@@ -1965,9 +1965,9 @@ public class StubParser {
                 // annotation exist in both types in the same location for the same hierarchy.
                 // So, if the newType is from a JDK stub file, then prefer the existing type.  This
                 // way user supplied stub files override jdk stub files.
-                AnnotatedTypeMerger.merge(existingType, newType);
+                AnnotatedTypeReplacer.replace(existingType, newType);
             } else {
-                AnnotatedTypeMerger.merge(newType, existingType);
+                AnnotatedTypeReplacer.replace(newType, existingType);
             }
             m.put(key, existingType);
         } else {
